add-opens to fix infinispan with java16
Signed-off-by: olivier lamy <oliver.lamy@gmail.com>